--- a/game connect 1.html
+++ b/game connect 1.html
@@ -4,19 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game App</title>
-firebase init
 
   <!-- Firebase SDKs -->
- npm install firebase
-const firebaseConfig = {
-  apiKey: "AIzaSyDLmsdKfv4vK8FP5x2BZg4E2Ps78Q0x2ms",
-  authDomain: "game-connect-38236.firebaseapp.com",
-  projectId: "game-connect-38236",
-  storageBucket: "game-connect-38236.firebasestorage.app",
-  messagingSenderId: "190049119694",
-  appId: "1:190049119694:web:c305cd33933c240cad4f9f",
-  measurementId: "G-1EK0R8L0MG"
-};
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
 
   <style>
     body {
@@ -133,12 +125,13 @@ const firebaseConfig = {
   <script>
     // Firebase Config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID",
+      apiKey: "AIzaSyDLmsdKfv4vK8FP5x2BZg4E2Ps78Q0x2ms",
+      authDomain: "game-connect-38236.firebaseapp.com",
+      projectId: "game-connect-38236",
+      storageBucket: "game-connect-38236.appspot.com",
+      messagingSenderId: "190049119694",
+      appId: "1:190049119694:web:c305cd33933c240cad4f9f",
+      measurementId: "G-1EK0R8L0MG"
     };
 
     // Initialize Firebase
