Update navigation links to PHP pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Kinara Services - Digital solutions, government services, documentation, and branding. Apply for services online.">
   <meta name="keywords" content="HELB, KRA, SHA, KUCCPS, eCitizen, Kenya services, Kinara digital hub">
   <meta name="author" content="Kinara Services">
+  <!-- Canonical URL --> <link rel="canonical" href="https://kinara-services-site.onrender.com/" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="style.css">
@@ -36,13 +37,17 @@
     </div>
 
       <ul class="nav-links" id="navLinks">
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#knowledge">Knowledge Hub</a></li>
-        <li><a href="#faqs">FAQs</a></li>
-        <li><a href="#apply">Apply</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="apply.php">Apply</a></li>
+  <li><a href="thankyou.php">Thank You</a></li>
+  <li><a href="gallery.php">Gallery</a></li>
+  <li><a href="#about">About Us</a></li>
+  <li><a href="#services">Services</a></li>
+  <li><a href="#knowledge">Knowledge Hub</a></li>
+  <li><a href="#faqs">FAQs</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
+
     </nav>
   </header>
 
