--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <header>
   <nav class="navbar">
-    <a href="index.php" class="logo">
+    <a href="index.html" class="logo">
       <img src="posters/kinara_logo.png" alt="Kinara Services Logo">
     </a>
     <div class="menu-icon" onclick="toggleMenu()">
