Add phone number validation for 07/01 formats

--- a/index.html
+++ b/index.html
@@ -129,11 +129,15 @@
 
   <form action="apply.php" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
-    <input type="tel" name="phone" placeholder="Your Phone Number" required>
+    <input type="tel" name="phone" placeholder="07XXXXXXXX or 01XXXXXXXX" 
+           pattern="^(07\d{8}|01\d{8})$" 
+           title="Phone number must start with 07 or 01 and be 10 digits long" 
+           required>
     <input type="text" name="service" placeholder="Service" required>
     <textarea name="message" placeholder="Message"></textarea>
     <button type="submit">Apply</button>
 </form>
+
 
     <select name="service" required>
       <option value="">Select a Service</option>
