Update Services section with new offerings

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <!-- Creative & Branding -->
     <div class="card"><h3>Graphic Design</h3><p>Posters, flyers, banners, and branding materials.</p></div>
     <div class="card"><h3>Event Cards Design</h3><p>Custom invitations, wedding cards, and event branding.</p></div>
+    <!-- New Services --> <div class="card"><h3>Website Development</h3><p>Responsive websites with SEO optimization, hosting setup, and ongoing maintenance.</p></div> <div class="card"><h3>Social Media Management</h3><p>Content creation, scheduling, and analytics to grow your brand visibility online.</p></div> <div class="card"><h3>Email Management</h3><p>Professional email setup, domain integration, and inbox organization for smooth communication.</p></div> <div class="card"><h3>CCTV Configuration</h3><p>Installation and setup of CCTV systems with remote monitoring options for security.</p></div> <div class="card"><h3>WiFi Installation</h3><p>Reliable internet setup, router configuration, and troubleshooting for homes, offices, and schools.</p></div>
   </div> <!-- ✅ Make sure this closes -->
 </section>
 
