Add SEO meta description and keywords

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Kinara Services - Digital solutions, government services, documentation, and branding. Apply for services online.">
   <meta name="keywords" content="HELB, KRA, SHA, KUCCPS, eCitizen, Kenya services, Kinara digital hub">
   <meta name="author" content="Kinara Services">
+  <meta name="description" content="Kinara Services offers website development, social media management, email setup, CCTV installation, and WiFi configuration in Kenya.">
+<meta name="keywords" content="website development Kenya, social media management worldwide, CCTV installation kenya, WiFi setup Kenya, email management services">
+
   <!-- Canonical URL --> <link rel="canonical" href="https://kinara-services-site.onrender.com/" />
 
   <!-- Stylesheets -->
